--- a/ruoyi-admin/src/main/resources/templates/index_website.html
+++ b/ruoyi-admin/src/main/resources/templates/index_website.html
@@ -6,13 +6,13 @@
 	<meta name="description" content="chinaz">
 	<meta name="author" content="webThemez.com">
 	<title>步步高教育电子</title>
-	<link rel="favicon" href="assets/images/favicon.png">
-	<link rel="stylesheet" media="screen" href="#css?family=Open+Sans:300,400,700">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/font-awesome.min.css"> 
-	<link rel="stylesheet" href="assets/css/bootstrap-theme.css" media="screen"> 
-	<link rel="stylesheet" href="assets/css/style.css">
-    <link rel='stylesheet' id='camera-css'  href='assets/css/camera.css' type='text/css' media='all'> 
+	<link  th:href="@{/assets/images/favicon.png}" rel="favicon">
+	<link  media="screen" href="#css?family=Open+Sans:300,400,700" rel="stylesheet">
+	<link  th:href="@{/assets/css/bootstrap.min.css}" rel="stylesheet">
+	<link  th:href="@{/assets/css/font-awesome.min.css}" rel="stylesheet"> 
+	<link  th:href="@{/assets/css/bootstrap-theme.css}" media="screen" rel="stylesheet"> 
+	<link  th:href="@{/assets/css/style.css}" rel="stylesheet">
+    <link rel='stylesheet' id='camera-css'  th:href='@{/assets/css/camera.css}' type='text/css' media='all'> 
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 	<script src="assets/js/html5shiv.js"></script>
@@ -27,28 +27,27 @@
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
 				<a class="navbar-brand" href="index.html">
-					<img src="assets/images/logo.png" alt="Techro HTML5 template"></a>
+					<img th:src="@{/assets/images/logo.png}" alt="Techro HTML5 template"></a>
 			</div>
 			
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
 					<li class="active" style="border-radius:3px 4px 5px 6px;"><a href="index.html">首页</a></li>
-					<li><a href="about.html">关于我们</a></li>
-					<li><a href="courses.html">学生佳绩</a></li>
-					<li><a href="price.html">课程简介</a></li>
-					<li><a href="videos.html">班型简介</a></li>
+					<li><a href="/website/about.html">关于我们</a></li>
+					<li><a href="/website/courses.html">学生佳绩</a></li>
+					<li><a href="/website/price.html">课程简介</a></li>
+					<li><a href="/website/videos.html">班型简介</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">院校选择<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="sidebar-right.html">Right Sidebar</a></li>
-							<li><a href="#">Dummy Link1</a></li>
-							<li><a href="#">Dummy Link2</a></li>
-							<li><a href="#">Dummy Link3</a></li>
+							<li><a th:href="sidebar-right.html">Right Sidebar</a></li>
+							<li><a  th:inline="none" href="#">Dummy Link1</a></li>
+							<li><a  th:inline="none" href="#">Dummy Link2</a></li>
+							<li><a  th:inline="none" href="#">Dummy Link3</a></li>
 						</ul>
 					</li>
-					<li><a href="contact.html">联系我们</a></li>
-					<li><a href="contact.html">联系我们</a></li>
-
+					<li><a href="/website/courses.html">一点资讯</a></li>
+					<li><a href="/website/contact.html">联系我们</a></li>
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
@@ -61,17 +60,17 @@
 		<div class="container">
              <div class="heading-text">							
 							<h1 class="animated flipInY delay1">Start Online Education</h1>
-							<p>Free Online education template for elearning and online education institute.</p>
+<!-- 							<p>Free Online education template for elearning and online education institute.</p> -->
 						</div>
             
 					<div class="fluid_container">                       
                     <div class="camera_wrap camera_emboss pattern_1" id="camera_wrap_4">
-                        <div data-thumb="assets/images/slides/thumbs/img1.jpg" data-src="assets/images/slides/img1.jpg">
+                        <div data-thumb="../static/assets/images/slides/thumbs/img1.jpg" th:data-src="@{/assets/images/slides/img1.jpg}">
                             <h2>We develop.</h2>
                         </div> 
-                        <div data-thumb="assets/images/slides/thumbs/img2.jpg" data-src="assets/images/slides/img2.jpg">
+                        <div data-thumb="../static/assets/images/slides/thumbs/img2.jpg" th:data-src="@{/assets/images/slides/img2.jpg}">
                         </div>
-                        <div data-thumb="assets/images/slides/thumbs/img3.jpg" data-src="assets/images/slides/img3.jpg">
+                        <div data-thumb="../static/assets/images/slides/thumbs/img3.jpg" th:data-src="@{/assets/images/slides/img3.jpg}">
                         </div> 
                     </div><!-- #camera_wrap_3 -->
                 </div><!-- .fluid_container -->
@@ -84,7 +83,7 @@
 					<div class="col-md-3">
 						<div class="grey-box-icon">
 							<div class="icon-box-top grey-box-icon-pos">
-								<img src="assets/images/1.png" alt="" />
+								<img th:src="@{/assets/images/1.png}" alt="" />
 							</div><!--icon box top -->
 							<h4>Online Courses</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tempus eleifend risus ut congue
@@ -106,7 +105,7 @@
 					<div class="col-md-3">
 						<div class="grey-box-icon">
 							<div class="icon-box-top grey-box-icon-pos">
-								<img src="assets/images/3.png" alt="" />
+								<img th:src="@{/assets/images/3.png}" alt="" />
 							</div><!--icon box top -->
 							<h4>Latest Updates</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tempus eleifend risus ut congue
@@ -117,7 +116,7 @@
 					<div class="col-md-3">
 						<div class="grey-box-icon">
 							<div class="icon-box-top grey-box-icon-pos">
-								<img src="assets/images/4.png" alt="" />
+								<img th:src="@{/assets/images/4.png}" alt="" />
 							</div><!--icon box top -->
 							<h4>Placements</h4>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tempus eleifend risus ut congue
@@ -135,7 +134,7 @@
                 <div class="col-lg-4 col-md-4 col-sm-12">
                     <div class="newsBox">
                         <div class="thumbnail">
-                            <figure><img src="assets/images/news2.jpg" alt=""></figure>
+                            <figure><img th:src="@{/assets/images/news2.jpg}" alt=""></figure>
                             <div class="caption maxheight2">
                             <div class="box_inner">
                                         <div class="box">
@@ -150,7 +149,7 @@
                 <div class="col-lg-4 col-md-4 col-sm-12">
                     <div class="newsBox">
                         <div class="thumbnail">
-                            <figure><img src="assets/images/news3.jpg" alt=""></figure>
+                            <figure><img th:src="@{/assets/images/news3.jpg}" alt=""></figure>
                             <div class="caption maxheight2">
                             <div class="box_inner">
                                         <div class="box">
@@ -165,7 +164,7 @@
                 <div class="col-lg-4 col-md-4 col-sm-12">
                     <div class="newsBox">
                         <div class="thumbnail">
-                            <figure><img src="assets/images/news4.jpg" alt=""></figure>
+                            <figure><img src="../static/assets/images/news4.jpg" alt=""></figure>
                             <div class="caption maxheight2">
                            <div class="box_inner">
                                         <div class="box">
@@ -351,15 +350,15 @@
 	</footer>
 
 	<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
-	<script src="assets/js/modernizr-latest.js"></script> 
-	<script type='text/javascript' src='assets/js/jquery.min.js'></script>
-    <script type='text/javascript' src='assets/js/fancybox/jquery.fancybox.pack.js'></script>
+	<script src="assets/js/modernizr-latest.js" th:src="@{/assets/js/modernizr-latest.js}"></script> 
+	<script type='text/javascript' src='../static/assets/js/jquery.min.js' th:src="@{/assets/js/jquery.min.js}"></script>
+    <script type='text/javascript' src='../static/assets/js/fancybox/jquery.fancybox.pack.js' th:src="@{/assets/js/fancybox/jquery.fancybox.pack.js}"></script>
     
-    <script type='text/javascript' src='assets/js/jquery.mobile.customized.min.js'></script>
-    <script type='text/javascript' src='assets/js/jquery.easing.1.3.js'></script> 
-    <script type='text/javascript' src='assets/js/camera.min.js'></script> 
-    <script src="assets/js/bootstrap.min.js"></script> 
-	<script src="assets/js/custom.js"></script>
+    <script type='text/javascript' src='../static/assets/js/jquery.mobile.customized.min.js' th:src="@{/assets/js/jquery.mobile.customized.min.js}"></script>
+    <script type='text/javascript' src='../static/assets/js/jquery.easing.1.3.js' th:src="@{/assets/js/jquery.easing.1.3.js}"></script> 
+    <script type='text/javascript' src='../static/assets/js/camera.min.js' th:src="@{/assets/js/camera.min.js}"></script> 
+    <script src="../static/assets/js/bootstrap.min.js" th:src="@{/assets/js/bootstrap.min.js}"></script> 
+	<script src="../static/assets/js/custom.js" th:src="@{/assets/js/custom.js}"></script>
     <script>
 		jQuery(function(){
 			
@@ -374,7 +373,7 @@
                 playPause: false,
                 navigation: false,
 				opacityOnGrid: false,
-				imagePath: 'assets/images/'
+				imagePath: '../static/assets/images/'
 			});
 
 		});
